<resources>
    <string name="app_name">Kuiz</string>
    <string name="txtCorrect">Correct</string>
    <string name="txtProgress">Progress</string>
    <string name="txtCategory">Category</string>
    <string name="txtDescription">Description</string>
    <string name="demopercent">70%</string>
    <string name="txtKuizApp">Kuiz App</string>
    <string name="txtRetailCreditRisk">Retail Credit Risk</string>
    <string name="version">VERSION 1.0.0</string>
    <string name="demoNumber">23</string>
    <string name="tvQuestion">Question</string>
    <string name="txtChoice">Choice</string>
    <string name="demoQuestion">Which of these is not a lending product offered by BSP?</string>
    <string name="txtTakeQuiz">Take Quiz</string>
    <string name="txtBSP">BSP</string>
    <string name="txtTrue">True</string>
    <string name="txtFalse">False</string>
    <string name="tagClosed">Closed</string>
    <string name="tagOpened">Opened</string>
    <string name="txtSolution">Solution</string>
    <string name="txtItem">Item</string>
    <string name="txtQuestion">Question</string>
    <string name="txtAdd">Add</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtSave">Save</string>
    <string name="txtEdit">Edit</string>
    <string name="txtResetProgress">Reset Progress</string>
</resources>