<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_darkest"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sIvUserImage_sideDrawerMain"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rnd"
        android:padding="2dp"
        android:elevation="7dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        android:tint="@color/green_darker"
        app:contentPadding="25dp"
        app:layout_constraintBottom_toTopOf="@+id/tvUserName_sideDrawerMain"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="@color/green"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/tvUserName_sideDrawerMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtKuizApp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvUserMail_sideDrawerMain"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvUserMail_sideDrawerMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtRetailCreditRisk"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tvUserMail_siderMain"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvUserMail_siderMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/txtBSP"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>