<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="80dp"
    android:layout_marginEnd="5dp"
    android:background="@drawable/bg_rect_r2_recent">

    <TextView
        android:id="@+id/tvCategoryLiRecent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/txtCategory"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/txtCorrect"
        android:textColor="@color/greenish_grey"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbCorrectLiRecent"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="90dp"
        android:layout_height="10dp"
        android:layout_marginEnd="4dp"
        android:max="100"
        android:progress="40"
        android:progressDrawable="@drawable/bg_pb_round"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/txtProgress"
        android:textColor="@color/greenish_grey"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/pbProgressLiRecent"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="90dp"
        android:layout_height="10dp"
        android:layout_marginEnd="4dp"
        android:max="100"
        android:progress="30"
        android:progressDrawable="@drawable/bg_pb_round"
        android:secondaryProgress="60"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>