<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="4dp"
    android:background="@drawable/bg_rect_r3_cat"
    android:layout_height="65dp">

    <ImageView
        android:id="@+id/ivTakeQuizLiMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivCategoryIconLiMain"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_rnd"
        android:padding="7dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        android:tint="@color/green_darkest"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="@color/white" />

    <TextView
        android:id="@+id/tvCategoryLiMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/txtCategory"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivTakeQuizLiMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCatDescriptionLiMain"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCatDescriptionLiMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/txtDescription"
        android:textColor="@color/greenish_grey"
        app:layout_constraintBottom_toBottomOf="@+id/sivCategoryIconLiMain"
        app:layout_constraintEnd_toStartOf="@+id/ivTakeQuizLiMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sivCategoryIconLiMain"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryLiMain"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_rnd"
        app:backgroundTint="@color/greenish_grey"
        app:layout_constraintBottom_toBottomOf="@+id/cpbCatProgressLiMain"
        app:layout_constraintEnd_toEndOf="@+id/cpbCatProgressLiMain"
        app:layout_constraintStart_toStartOf="@+id/cpbCatProgressLiMain"
        app:layout_constraintTop_toTopOf="@+id/cpbCatProgressLiMain" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpbCatProgressLiMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:max="100"
        android:progress="70"
        app:trackColor="@color/white"
        app:indicatorColor="@color/green_light"
        app:indicatorTrackGapSize="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProgressPercentLiMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/demopercent"
        android:textColor="@color/green_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cpbCatProgressLiMain"
        app:layout_constraintEnd_toEndOf="@+id/cpbCatProgressLiMain"
        app:layout_constraintStart_toStartOf="@+id/cpbCatProgressLiMain"
        app:layout_constraintTop_toTopOf="@+id/cpbCatProgressLiMain" />


</androidx.constraintlayout.widget.ConstraintLayout>